--- a/text/tests/tests.tex
+++ b/text/tests/tests.tex
@@ -1,7 +1,7 @@
 % Opis testów, które pozwalają określić czy aplikacja funkcjonuje jak powinna
 Testy aplikacji podzielone zostały na dwie kategorie. Sprawdzone zostało czy zaimplementowane
-elementy interfejsu użytkownika reagują poprawnie na zmiany stanu w aplikacji. Zweryfikowane zostało
-także czy obecne w aplikacji odzwierciedlenia teorii sensorów pomiarowych zwracają poprawne
+elementy interfejsu użytkownika reagują poprawnie na zmiany stanu~w~aplikacji. Zweryfikowane zostało
+także czy obecne~w~aplikacji odzwierciedlenia teorii sensorów pomiarowych zwracają poprawne
 wartości.
 
 \section{Poprawność działania interfejsu użytkownika}
