all chapters done

--- a/text/abstract/abstract-pl.tex
+++ b/text/abstract/abstract-pl.tex
@@ -2,13 +2,13 @@ Celem pracy było stworzenie aplikacji internetowej, która może zostać
 wykorzystana jako narzędzie do wspomagania studentów wykonujących ćwiczenia w laboratorium
 Przetworników Pomiarowych.
 
-Aplikacja została napisana w języku Typescript, który jest
-rozszerzeniem języka Javascript.  Zaimplementowane zostały trzy ćwiczenia, które wykonywane są
-przez studentów m.in. na zajęciach ,,Sensory i Aktuatory'' - do sensorów temperatury (RTD,
-Termoogniwa), przesunięcia (LVDT) oraz tensometrów.
+Aplikacja została napisana w języku Typescript, który jest rozszerzeniem języka Javascript.
+Zaimplementowane zostały trzy ćwiczenia, które wykonywane są przez studentów m.in. na zajęciach
+,,Sensory i Aktuatory'' - do sensorów temperatury (RTD, Termoogniwa), przesunięcia (LVDT) oraz
+tensometrów.
 
 Aplikacja zbudowana została wykorzystując frameworki (ang. szkielety aplikacyjne) React oraz
-Next.js, które pozwalają na budowanie dużo bardziej zaawansowanych oraz interaktywnych interfejsów
+Next.js, które pozwalają na budowanie złożonych oraz interaktywnych interfejsów
 użytkownika, niż jest to możliwe wykorzystując tylko Javascript. Wykorzystanie języka Typescript
 w~kodzie źródłowym aplikacji pozwoliło na wykorzystanie narzędzi niedostępnych w Javascript.
 
