--- a/config.tex
+++ b/config.tex
@@ -5,11 +5,11 @@
 \engtitle{Web application supporting the implementation of exercises in the laboratory}
 \album{290988}
 \author{inż. Mikołaj Rosiński}
-\promotor{dr hab. inż. Bogdan Dziadak}
+\promotor{dr inż. Bogdan Dziadak}
 \date{2022}
 
 \streszczeniepracy{\input{text/abstract/abstract-pl.tex}}
-\slowakluczowe{Aplikacja internetowa, Javascript, Typescript, React, Sensory }
+\slowakluczowe{Aplikacja Internetowa, JavaScript, TypeScript, React, Next.js, Sensory, Przetworniki}
 
 \thesisabstract{\input{text/abstract/abstract-eng.tex}}
-\thesiskeywords{Web application, Typescript, React, Sensors }
+\thesiskeywords{Web Application, JavaScript, TypeScript, React, Next.js, Sensors, Transducers}
