--- a/text/abstract/abstract-eng.tex
+++ b/text/abstract/abstract-eng.tex
@@ -1,7 +1,7 @@
 The aim of this thesis was to design and implement web application, that can be used as~a~tool to
 support students performing excercises in the Measurment Transducers laboratory. The application was
-created using TypeScript programming language, which is an extension to JavaScript programming
-language.
+created using TypeScript programming language, which is an extension, a superset, to JavaScript
+programming language.
 
 The tool has implemented 3 types of measurement sensors, which are used in measurements of
 non-electrical quantities -- temperature (resistance temperature detectors, thermocouples),
